--- a/announcements.css
+++ b/announcements.css
@@ -1,5 +1,5 @@
 div.background {
-	padding: 30px 0 200px 0;
+	height: 800px;
     background: red; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* For Opera 11.1 to 12.0 */
