--- a/committee.css
+++ b/committee.css
@@ -23,12 +23,12 @@ h3{
 }
 
 h4{
-	font-family: "century gothic";
+	font-family: "CenturyGothic";
 	font-size: 19px;
 }
 
 p{
-	font-family: century gothic;
+	font-family: "CenturyGothic";
 	font-size: 17px;
 }
 
