--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 @font-face{font-family: 'LostInWild'; src: url(Fonts/LostInWild.ttf) format('truetype');}
 @font-face{font-family: 'Tribeca'; src: url(Fonts/Tribeca.ttf) format('truetype');}
 @font-face{font-family: 'SouthAfirkas'; src: url(Fonts/SouthAfirkas.ttf) format('truetype');}
-@font-face{font-family: 'CenturyGothic'; src: url(Fonts/CenturyGothic.ttf) format('truetype');}
+@font-face{font-family: 'CenturyGothic'; src: url(Fonts/CenturyGothic.TTF) format('truetype');}
 /*////////////////// END FONTS ////////////////////////////////*/
 
 /* ////////////////// COLORS ///////////////////////////////////
