--- a/FAQ.css
+++ b/FAQ.css
@@ -2,20 +2,22 @@
 #4d0000, #72191b, #cc6032, #eb8d3a, #fde079
 */
 
+*{
+	color: white;
+}
 
 div.background {
-	padding: 30px 0 200px 0;
-    background: red; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066, white); /* Standard syntax */
+	padding-top: 30px;
+    background: #eb8d3a; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* Standard syntax */
 }
 
 div.attendee{
 	display: block;
-	margin: 0 15%;
-	background: white;
+	margin: 0 10%;
 	padding: 20px 30px 1px 30px;
 }
 
@@ -33,9 +35,8 @@ p{
 
 div.FAQ{
 	display: block;
-	margin: 70px 15% 0 15%;
+	margin: 70px 8% 0 8%;
 	padding: 20px 40px;
-	background: white;
 	text-align: left;
 }
 
@@ -43,9 +44,14 @@ h1.FAQ{
 	margin-bottom: 30px;
 }
 
+a.OOR{
+	color: #8ec8ff;
+}
+
 h1{
 	padding: 0;
 	text-align: center;
+	color: white;
 }
 
 h2{
@@ -53,10 +59,4 @@ h2{
 	padding: 0;
 	margin: 0;
 	font-size: 20px;
-}
-
-
-
-div.bottom{
-	padding-top: 200px
 }
