--- a/FAQ.css
+++ b/FAQ.css
@@ -17,8 +17,8 @@ div.background {
 
 div.attendee{
 	display: block;
-	margin: 0 10%;
-	padding: 20px 30px 1px 30px;
+	margin: 0 15%;
+	padding: 20px 30px 0 30px;
 }
 
 p{
@@ -35,7 +35,7 @@ p{
 
 div.FAQ{
 	display: block;
-	margin: 70px 8% 0 8%;
+	margin: 40px 8% 0 8%;
 	padding: 20px 40px;
 	text-align: left;
 }
