--- a/main.css
+++ b/main.css
@@ -116,6 +116,14 @@ img.cnh {
     }
 }
 
+
+@media only screen and (max-width: 576px) {
+	img.cki{
+		height: 80px;
+		padding-top: 12px;
+	}
+}
+
 /*////////////////// NAVBAR END ////////////////////////////////*/
 
 
