--- a/main.css
+++ b/main.css
@@ -168,6 +168,16 @@ img.icon{
 
 /*////////////////// ALL SECTIONS END ////////////////////////////////*/
 
+
+/*///////////////////// ANIMATION BEGIN ////////////////////////*/
+video{
+	margin: -7% 0 -0.5% 0;
+	width: 100%;
+}
+
+/*///////////////////// ANIMATION END ////////////////////////*/
+
+
 /*////////////////// SECTION -1 BEGIN ////////////////////////////////*/
 div.section-1{ 
 	text-align: center;
